Update JDK 17 info